--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha --exit"
   },
   "keywords": [],
-  "author": "",
+  "author": "Protus",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
